// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeSeparator renders correctly 1`] = `
<Divider
  text="payment details"
  type="light"
/>
`;

exports[`TradeSeparator renders correctly with disputeActive 1`] = `
<Divider
  text="payment details"
  type="error"
/>
`;

exports[`TradeSeparator renders correctly with icon 1`] = `
<Divider
  icon={
    <Icon
      color="#7D675E"
      id="xCircle"
      style={
        {
          "height": 16,
          "marginRight": 4,
          "width": 16,
        }
      }
    />
  }
  text="trade canceled"
  type="light"
/>
`;
